# LearnFFmpeg

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/gpf/ffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/cpp/util/: LogUtil.h
app/src/main/java/com/gpf/ffmpeg/: FFmpeg.kt  MainActivity.kt
app/src/test/java/com/gpf/ffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
